[package]
name = "cc-traits-derive"
version = "1.0.0"
authors = ["Timothée Haudebourg <timothee@haudebourg.net>", "Mingwei Samuel <mingwei.samuel@gmail.com>"]
edition = "2021"
categories = []
keywords = []
description = "Derive macros for cc-traits"
repository = "https://github.com/timothee-haudebourg/cc-traits"
documentation = "https://docs.rs/cc-traits"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
proc-macro-crate = "1.3.0"
quote = "1.0.0"
syn = { version = "2.0.0", features = [ "full", "extra-traits" ] }
