[package]
name = "cc-traits"
version = "1.0.0"
authors = ["Timothée Haudebourg <timothee@haudebourg.net>", "Mingwei Samuel <mingwei.samuel@gmail.com>"]
edition = "2021"
categories = ["data-structures", "no-std", "rust-patterns"]
keywords = ["trait", "data-structure", "collection", "common"]
description = "Common collection traits"
repository = "https://github.com/timothee-haudebourg/cc-traits"
documentation = "https://docs.rs/cc-traits"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[features]
default = ["alloc", "std"]
alloc = []
std = []
nightly = []
all-impls = ["slab", "slotmap", "smallvec", "serde_json", "ijson"]

[dependencies]
cc-traits-derive = { path = "../cc-traits-derive" }
slab = { version = "^0.4", optional = true }
slotmap = { version = "^1.0.0", optional = true }
smallvec = { version = "^1.6", optional = true }
serde_json = { version = "^1.0.71", optional = true }
ijson = { version = "^0.1", optional = true }